sample/pythonex-withpipeline/deploymentconfig-pythonex-git.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://github.com/catsy00/pythonex.git'
    openshift.io/generated-by: OpenShiftWebConsole
  namespace: myproject
  labels:
    app: pythonex-git
    app.kubernetes.io/component: pythonex-git
    app.kubernetes.io/instance: pythonex-git
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: pythonex-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: '3.6'
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - pythonex-git
        from:
          kind: ImageStreamTag
          namespace: myproject
          name: 'pythonex-git:latest'
        lastTriggeredImage: >-
          image-registry.openshift-image-registry.svc:5000/myproject/pythonex-git@sha256:65174467c29346a7fbe1b9fc91ab9386d2f33a5f20ef0dda2c9646c3ed13ae9d
    - type: ConfigChange
  replicas: 2
  revisionHistoryLimit: 10
  test: false
  selector:
    app: pythonex-git
    deploymentconfig: pythonex-git
  template:
    metadata:
      labels:
        app: pythonex-git
        deploymentconfig: pythonex-git
    spec:
      containers:
        - name: pythonex-git
          image: >-
            image-registry.openshift-image-registry.svc:5000/myproject/pythonex-git@sha256:65174467c29346a7fbe1b9fc91ab9386d2f33a5f20ef0dda2c9646c3ed13ae9d
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
