sample/pythonex-withpipeline/service-pythonex-git.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://github.com/catsy00/pythonex.git'
    openshift.io/generated-by: OpenShiftWebConsole
  namespace: myproject
  labels:
    app: pythonex-git
    app.kubernetes.io/component: pythonex-git
    app.kubernetes.io/instance: pythonex-git
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: pythonex-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: '3.6'
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: pythonex-git
    deploymentconfig: pythonex-git
  type: ClusterIP
  sessionAffinity: None
