sample/pythonex-withpipeline/route-pythonex-git.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  namespace: myproject
  labels:
    app: pythonex-git
    app.kubernetes.io/component: pythonex-git
    app.kubernetes.io/instance: pythonex-git
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: pythonex-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: '3.6'
spec:
  to:
    kind: Service
    name: pythonex-git
    weight: 100
  port:
    targetPort: 8080-tcp
